Replace 'compressed class ptrs' with 'compact obj headers' when running with +UCOH